lesson_2_crud/k8s/6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-backend
  namespace: otus-ms-lesson-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-backend
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: crud-backend
          image: mornimf/otus-crud-backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
#          livenessProbe:
#            httpGet:
#              port: 8000
#              path: /api/v1/health
#            initialDelaySeconds: 10
#            periodSeconds: 5
#            timeoutSeconds: 2
#          readinessProbe:
#            httpGet:
#              port: 8000
#              path: /api/v1/health
#            initialDelaySeconds: 10
#            periodSeconds: 5
