lesson_2_crud/k8s/7-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
  namespace: otus-ms-lesson-2
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: crud-backend
