lesson_2_crud/k8s/8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: otus-ms-lesson-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: entrypoint
                port:
                  number: 8000
            path: /
